fix overlapping text at bottom of contact.html in >599px media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ h1, h2 {
     width: 100%;
     background: url('../images/skyscrapers-1081737_1920.jpg');
       /* Create parallax scrolling effect */
+      /* Parallax scrolling code from W3Schools https://www.w3schools.com/howto/howto_css_parallax.asp */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -920,22 +921,29 @@ div.desc {
         height: auto;
         width: 90%;
         margin: 0 auto;
-        display: flex;
-        flex-direction: column;
+        display: block;
         }
         
         .contact-left-side {
         width: 100%;
         height: auto;
+        padding: 10px;
+        float: none;
         }
 
         .contact-right-side {
         width: 100%;
         height: auto;
+        float: none;
+        margin-bottom: 50px;
         }
 
         .form-title {
-            padding: 20px;
-            text-align:center;
+            text-align:left;
+            padding: none;
         }
+
+        input[type=text], select, textarea {
+            font-size: 14px;
+}
 }
